// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ModelIndexTable > should allow local overrides 1`] = `
<DocumentFragment>
  <div
    class="model-index-table model-index-table-user"
  >
    <table
      class="table table-striped table-hover"
    >
      <thead>
        <tr>
          <th
            class="table-header-clickable"
          >
            <div
              class="d-flex flex-row gap-1"
            >
              <div>
                Foo
              </div>
              <div
                class="d-flex flex-column ms-auto"
              >
                <svg
                  fill="currentColor"
                  height="12"
                  width="12"
                >
                  <use
                    xlink:href="/@fs/Users/jpr/src/Rhino/opensource-construction/rhino-project/node_modules/.pnpm/bootstrap-icons@1.11.3/node_modules/bootstrap-icons/bootstrap-icons.svg#caret-up"
                  />
                </svg>
                <svg
                  fill="currentColor"
                  height="12"
                  width="12"
                >
                  <use
                    xlink:href="/@fs/Users/jpr/src/Rhino/opensource-construction/rhino-project/node_modules/.pnpm/bootstrap-icons@1.11.3/node_modules/bootstrap-icons/bootstrap-icons.svg#caret-down"
                  />
                </svg>
              </div>
            </div>
          </th>
          <th
            class=""
          >
            <div
              class="d-flex flex-row gap-1"
            >
              <div>
                Foo
              </div>
            </div>
          </th>
          <th
            class=""
          >
            <div
              class="d-flex flex-row gap-1"
            >
              <div>
                Foo
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="table-row-clickable"
        >
          <td>
            <div>
              Bar
            </div>
          </td>
          <td>
            <div>
              Bar
            </div>
          </td>
          <td>
            <div>
              Bar
            </div>
          </td>
        </tr>
        <tr
          class="table-row-clickable"
        >
          <td>
            <div>
              Bar
            </div>
          </td>
          <td>
            <div>
              Bar
            </div>
          </td>
          <td>
            <div>
              Bar
            </div>
          </td>
        </tr>
        <tr
          class="table-row-clickable"
        >
          <td>
            <div>
              Bar
            </div>
          </td>
          <td>
            <div>
              Bar
            </div>
          </td>
          <td>
            <div>
              Bar
            </div>
          </td>
        </tr>
        <tr
          class="table-row-clickable"
        >
          <td>
            <div>
              Bar
            </div>
          </td>
          <td>
            <div>
              Bar
            </div>
          </td>
          <td>
            <div>
              Bar
            </div>
          </td>
        </tr>
        <tr
          class="table-row-clickable"
        >
          <td>
            <div>
              Bar
            </div>
          </td>
          <td>
            <div>
              Bar
            </div>
          </td>
          <td>
            <div>
              Bar
            </div>
          </td>
        </tr>
        <tr
          class="table-row-clickable"
        >
          <td>
            <div>
              Bar
            </div>
          </td>
          <td>
            <div>
              Bar
            </div>
          </td>
          <td>
            <div>
              Bar
            </div>
          </td>
        </tr>
        <tr
          class="table-row-clickable"
        >
          <td>
            <div>
              Bar
            </div>
          </td>
          <td>
            <div>
              Bar
            </div>
          </td>
          <td>
            <div>
              Bar
            </div>
          </td>
        </tr>
        <tr
          class="table-row-clickable"
        >
          <td>
            <div>
              Bar
            </div>
          </td>
          <td>
            <div>
              Bar
            </div>
          </td>
          <td>
            <div>
              Bar
            </div>
          </td>
        </tr>
        <tr
          class="table-row-clickable"
        >
          <td>
            <div>
              Bar
            </div>
          </td>
          <td>
            <div>
              Bar
            </div>
          </td>
          <td>
            <div>
              Bar
            </div>
          </td>
        </tr>
        <tr
          class="table-row-clickable"
        >
          <td>
            <div>
              Bar
            </div>
          </td>
          <td>
            <div>
              Bar
            </div>
          </td>
          <td>
            <div>
              Bar
            </div>
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr>
          <th>
            <div>
              Baz
            </div>
          </th>
          <th>
            <div>
              Baz
            </div>
          </th>
          <th>
            <div>
              Baz
            </div>
          </th>
        </tr>
      </tfoot>
    </table>
  </div>
</DocumentFragment>
`;

exports[`ModelIndexTable > should allow local overrides of Table 1`] = `
<DocumentFragment>
  <div
    class="model-index-table model-index-table-user"
  >
    <div>
      Foo
    </div>
  </div>
</DocumentFragment>
`;

exports[`ModelIndexTable > should render with global override shorthand 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;

exports[`ModelIndexTable > should render with global override shorthand for model 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;
